ready to deploy

--- a/index.html
+++ b/index.html
@@ -18,33 +18,32 @@
 			<div>
 				<h2>Search Songs</h2>
 			</div>
-      
-			<div class="input-group mb-3 w-50 mx-auto">
-					<input
-						type="text"
-						class="form-control"
-						id="search"
-						placeholder="Search songs..."
-					/>
-					<button
-					class="btn bg-primary"
-					style="color: white;"
-            id="submit"
-					>
-						Search
-					</button>
-        </div>
+
+			<!-- 0D6EFD -->
+			<div id="searchBox">
+				<input
+					type="text"
+					id="search"
+					placeholder="Search songs..."
+				/>
+
+				<button
+					id="submit"
+				>
+					Search
+				</button>
+			</div>
 		</header>
 
 		<div class="box" id="results">
 			<p>Results...</p>
-	</div>
+		</div>
 
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
 			crossorigin="anonymous"
 		></script>
-    <script src="./script.js"></script>
+		<script src="./script.js"></script>
 	</body>
 </html>
